--- a/Index.html
+++ b/Index.html
@@ -1,2 +1,13 @@
-Ciao
-Fashion Design
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <title>Sito Web</title>
+</head>
+
+<body>
+  <h1>Chi siamo</h1>
+  <p>Azienda ABC</p>
+  <h2>Dove siamo</h2>
+</body>
+
+</html>
