--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <title>Sito Web</title>
+  <meta charset="UTF-8">
+  <title>Titolo della Pagina</title>
 </head>
 
 <body>
-  <h1>Chi siamo</h1>
-  <p>Azienda ABC</p>
-  <h2>Dove siamo</h2>
-</body>
+  <div>
+    <a href="#chisiamo">Chi siamo</a>
+    <a href="#dovesiamo">Dove siamo</a>
+  </div>
 
+  
+  <h1 id="chisiamo">Chi siamo</h1>
+  <p>Testo del paragrafo</p>
+  
+  <h1 id="dovesiamo">Dove siamo</h1>
+  <p>Testo del paragrafo</p>
+  
+</body>
 </html>
