--- a/Index.html
+++ b/Index.html
@@ -6,17 +6,20 @@
 </head>
 
 <body>
-  <div>
+  <div style="background-color red;">
+    <img src="https://via.placeholder.com/100x100">
     <a href="#chisiamo">Chi siamo</a>
     <a href="#dovesiamo">Dove siamo</a>
   </div>
 
-  
   <h1 id="chisiamo">Chi siamo</h1>
   <p>Testo del paragrafo</p>
   
   <h1 id="dovesiamo">Dove siamo</h1>
   <p>Testo del paragrafo</p>
+  <img src="https://via.placeholder.com/400x200">
+
+
   
 </body>
 </html>
