--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
     <img src="https://via.placeholder.com/100x100">
     <a href="#chisiamo">Chi siamo</a>
     <a href="#dovesiamo">Dove siamo</a>
+    <a href="#dovesiamo">Contatti</a>
   </div>
 
   <h1 id="chisiamo">Chi siamo</h1>
@@ -18,6 +19,9 @@
   <h1 id="dovesiamo">Dove siamo</h1>
   <p>Testo del paragrafo</p>
   <img src="https://via.placeholder.com/400x200">
+
+   <h1 id="dovesiamo">Contatti</h1>
+  <p>Testo del paragrafo</p>
 
 
   
