--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div style="background-color:red;">
-    <img src="https://via.placeholder.com/100x100">
+    <img src="https://i.pinimg.com/originals/59/6d/18/596d1853e2f7fd56dd91cb23301b0ce7.jpg">
     <a href="#chisiamo">Chi siamo</a>
     <a href="#dovesiamo">Dove siamo</a>
     <a href="#dovesiamo">Contatti</a>
