--- a/Index.html
+++ b/Index.html
@@ -14,13 +14,16 @@
   </div>
 
   <h1 id="chisiamo">Chi siamo</h1>
-  <p>Testo del paragrafo</p>
+  <p>Piccola azienda artigiana di abbigliamento specializzata nella produzione di corsetteria personalizzata su misura con un design moderno e innovativo.
+Utilizza materiali e tessuti sostenibili sia dal punto di vista ecologico sia per quanto riguarda la mano d’opera coinvolta nella catena di produzione composta principalmente da artigiani qualificati. 
+La produzione si basa sul sistema made-to-misure, ovvero capi ottenuti a partire da modelli già realizzati ma adattati alla fisicità di ogni cliente.
+</p>
   
   <h1 id="dovesiamo">Dove siamo</h1>
   <p>Testo del paragrafo</p>
   <img src="https://via.placeholder.com/400x200">
 
-   <h1 id="dovesiamo">Contatti</h1>
+   <h1 id="contatti">Contatti</h1>
   <p>Testo del paragrafo</p>
 
 
