--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <div style="background-color:red;">
+  <div style="background-color:violet;">
     <img src="https://via.placeholder.com/100x100">
     <a href="#chisiamo">Chi siamo</a>
     <a href="#dovesiamo">Dove siamo</a>
