--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div style="background-color:violet;">
-    <img src="https://via.placeholder.com/100x100">
+    <img src="https://via.placeholder.com/50x50">
     <a href="#chisiamo">Chi siamo</a>
     <a href="#dovesiamo">Dove siamo</a>
     <a href="#dovesiamo">Contatti</a>
@@ -26,6 +26,9 @@ La produzione si basa sul sistema made-to-misure, ovvero capi ottenuti a partire
    <h1 id="contatti">Contatti</h1>
   <p>Testo del paragrafo</p>
 
+<div class="myfooter">
+  FOOTER
+</div>
 
   
 </body>
