--- a/Index.html
+++ b/Index.html
@@ -2,34 +2,46 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Titolo della Pagina</title>
+  <title>Erica Reibaldi Portfolio</title>
+  <style>
+    .myheader {
+      background-color:rgb(241, 173, 241);
+    }
+    .mybody{
+      background-color:darkseagreen;
+    }
+    .myfooter{
+      background-color:rgb(110, 41, 110);
+    }
+
+  </style>
 </head>
 
 <body>
-  <div style="background-color:violet;">
+  <div  class="myheader">
     <img src="https://via.placeholder.com/50x50">
-    <a href="#chisiamo">Chi siamo</a>
-    <a href="#dovesiamo">Dove siamo</a>
-    <a href="#dovesiamo">Contatti</a>
+    <a href="#chisono">Chi sono</a>
+    <a href="#dovetrovarmi">Dove trovarmi</a>
+    <a href="#contatti">Contatti</a>
   </div>
-
-  <h1 id="chisiamo">Chi siamo</h1>
-  <p>Piccola azienda artigiana di abbigliamento specializzata nella produzione di corsetteria personalizzata su misura con un design moderno e innovativo.
-Utilizza materiali e tessuti sostenibili sia dal punto di vista ecologico sia per quanto riguarda la mano d’opera coinvolta nella catena di produzione composta principalmente da artigiani qualificati. 
-La produzione si basa sul sistema made-to-misure, ovvero capi ottenuti a partire da modelli già realizzati ma adattati alla fisicità di ogni cliente.
-</p>
+<div class="mybody">
+  <h1 id="chisono">Chi sono</h1>
+  <p> Studentessa di Fashion Design  che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio, ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano delle storie attraverso la mia visione della moda.
+    Scoprite il mio portfolio online, una vetrina virtuale dei miei progetti più recenti. 
+    Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
+    Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme  </p>
   
-  <h1 id="dovesiamo">Dove siamo</h1>
+  <h1 id="dovetrovarmi">Dove trovarmi</h1>
   <p>Testo del paragrafo</p>
   <img src="https://via.placeholder.com/400x200">
 
    <h1 id="contatti">Contatti</h1>
   <p>Testo del paragrafo</p>
 
+  
 <div class="myfooter">
   FOOTER
 </div>
 
-  
 </body>
 </html>
