--- a/Index.html
+++ b/Index.html
@@ -26,9 +26,8 @@
   </div>
 <div class="mybody">
   <h1 id="chisono">Chi sono</h1>
-  <p> Studentessa di Fashion Design  che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio, ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano delle storie attraverso la mia visione della moda.
-    Scoprite il mio portfolio online, una vetrina virtuale dei miei progetti più recenti. 
-    Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
+  <p> Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio, ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano delle storie attraverso la mia visione della moda.
+    Scopri il mio portfolio online, una vetrina virtuale dei miei progetti più recenti. Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
     Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme  </p>
   
   <h1 id="dovetrovarmi">Dove trovarmi</h1>
