--- a/Index.html
+++ b/Index.html
@@ -5,10 +5,10 @@
   <title>Erica Reibaldi Portfolio</title>
   <style>
     .myheader {
-      background-color:rgb(241, 173, 241);
+      background-color:rgb(158, 121, 157);
     }
     .mybody{
-      background-color:darkseagreen;
+      background-color:white(158, 121, 157);
     }
     .myfooter{
       background-color:rgb(110, 41, 110);
@@ -27,7 +27,8 @@
 <div class="mybody">
   <h1 id="chisono">Chi sono</h1>
   <p> Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio, ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano delle storie attraverso la mia visione della moda.
-    Scopri il mio portfolio online, una vetrina virtuale dei miei progetti più recenti. Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
+    Scoprite il mio portfolio online, una vetrina virtuale dei miei progetti più recenti. 
+    Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
     Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme  </p>
   
   <h1 id="dovetrovarmi">Dove trovarmi</h1>
