--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
       background-color:rgb(158, 121, 157);
     }
     .mybody{
-      background-color:white(158, 121, 157);
+      background-color: white(158, 121, 157);
     }
     .myfooter{
       background-color:rgb(110, 41, 110);
@@ -25,18 +25,25 @@
     <a href="#contatti">Contatti</a>
   </div>
 <div class="mybody">
-  <h1 id="chisono">Chi sono</h1>
+  <h1 id="chisono"</h1
+  <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Helvetica" size="5">Chi sono </font><br /> </h2>
   <p> Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio, ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano delle storie attraverso la mia visione della moda.
     Scoprite il mio portfolio online, una vetrina virtuale dei miei progetti più recenti. 
     Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
     Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme  </p>
   
-  <h1 id="dovetrovarmi">Dove trovarmi</h1>
-  <p>Testo del paragrafo</p>
+  <h1 id="dovetrovarmi"</h1>
+  <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Helvetica" size="5">Dove trovarmi</font><br /> </h2>
+  <p> Via abc 123, Torino, 10024 </p>
   <img src="https://via.placeholder.com/400x200">
 
-   <h1 id="contatti">Contatti</h1>
-  <p>Testo del paragrafo</p>
+   <h1 id="contatti"</h1></h1>
+   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Helvetica" size="5">Contatti</font><br /> </h2>
+   <body>
+     <font face="Times New Roman" size="3" style=" color: black (243, 243, 243);"> E-mail: reibldierica@gmail.com <br/>
+       ig: @reibaldierica <br>
+       Telefono: 012 3456789 <br>
+       Linkedin: Erica Reibaldi</font><br/>
 
   
 <div class="myfooter">
