--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
    <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Helvetica" size="5">Contatti</font><br /> </h2>
    <body>
      <font face="Times New Roman" size="3" style=" color: black (243, 243, 243);"> E-mail: reibaldierica@gmail.com <br/>
-       ig: @reibaldierica <br>
+       Instagram: @reibaldierica <br>
        Telefono: 012 3456789 <br>
        Linkedin: Erica Reibaldi</font><br/>
 
