--- a/Index.html
+++ b/Index.html
@@ -37,17 +37,17 @@
   <p> Via abc 123, Torino, 10024 </p>
   <img src="https://via.placeholder.com/400x200">
 
-   <h1 id="contatti"</h1></h1>
-   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Helvetica" size="5">Contatti</font><br /> </h2>
-   <body>
-     <font face="Times New Roman" size="3" style=" color: black (243, 243, 243);"> E-mail: reibaldierica@gmail.com <br/>
-       Instagram: @ericareibaldi <br>
-       Telefono: 012 3456789 <br>
-       Linkedin: Erica Reibaldi</font><br/>
 
-  
+
+ 
 <div class="myfooter">
-  FOOTER
+  <h1 id="contatti"</h1></h1>
+  <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Helvetica" size="5">Contatti</font><br /> </h2>
+  <body>
+    <font face="Times New Roman" size="3" style=" color: white (243, 243, 243);"> E-mail: reibaldierica@gmail.com <br/>
+      Instagram: @ericareibaldi <br>
+      Telefono: 012 3456789 <br>
+      Linkedin: Erica Reibaldi</font><br/>
 </div>
 
 </body>
