--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
   <h1 id="contatti"</h1></h1>
   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Helvetica" size="5">Contatti</font><br /> </h2>
   <body>
-    <font face="Times New Roman" size="3" style=" color: white (243, 243, 243);"> E-mail: reibaldierica@gmail.com <br/>
+    <font face="Times New Roman" size="3" style=" color: rgb(218, 205, 205) (243, 243, 243);"> E-mail: reibaldierica@gmail.com <br/>
       Instagram: @ericareibaldi <br>
       Telefono: 012 3456789 <br>
       Linkedin: Erica Reibaldi</font><br/>
