--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,32 @@
   <title>Erica Reibaldi Portfolio</title>
   <style>
     .myheader {
+      background-color:rgb(250, 246, 246);
+    }
+    .mybody{
+      background-color:rgb(225, 192, 235);
+    }
+    .myfooter{
+      background-color:rgb(0, 0, 0);
+    }
+    .myheader {
+      display: flex;
+      flex-direction: row;
+      margin: auto;
+      align-items: center;
+      padding: 10px;
+    }
+    .myheader a {
+      padding: 20px;
+
+    }
+    #chisono :hover {
+      padding: 20px;
+      background-color: rgb(255, 255, 255);
+    }
+   </style>
+  <style>
+    .myheader {
       background-color:rgb(158, 121, 157);
     }
     .mybody{
