--- a/Index.html
+++ b/Index.html
@@ -2,19 +2,8 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="index.css">
   <title>Erica Reibaldi Portfolio</title>
-  <style>
-    .myheader {
-      background-color:rgb(158, 121, 157);
-    }
-    .mybody{
-      background-color: white(158, 121, 157);
-    }
-    .myfooter{
-      background-color:rgb(110, 41, 110);
-    }
-
-  </style>
 </head>
 
 <body>
