--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
   <div  class="myheader">
     <img src="https://via.placeholder.com/50x50">
     <a href="#chisono">Chi sono</a>
+    <a href="#Progetti">Progetti</a>
     <a href="#dovetrovarmi">Dove trovarmi</a>
     <a href="#contatti">Contatti</a>
   </div>
@@ -21,6 +22,9 @@
     Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
     Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.  </p>
   
+  <h1 id="Progetti"</h1
+  <h2> Progetti</h2>
+
   <h1 id="dovetrovarmi"</h1>
   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Helvetica" size="5">Dove trovarmi</font><br /> </h2>
   <p> Via abc 123, Torino, 10024 </p>
