--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
   </div>
 <div class="mybody">
   <h1 id="chisono"</h1
-  <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Helvetica" size="5">Chi sono </font><br /> </h2>
+  <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5">Chi sono </font><br /> </h2>
   <p> Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio, ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano delle storie attraverso la mia visione della moda.
     Scoprite il mio portfolio online, una vetrina virtuale dei miei progetti più recenti. 
     Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
@@ -26,7 +26,7 @@
   <h2> Progetti</h2>
 
   <h1 id="dovetrovarmi"</h1>
-  <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Helvetica" size="5">Dove trovarmi</font><br /> </h2>
+  <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5">Dove trovarmi</font><br /> </h2>
   <p> Via abc 123, Torino, 10024 </p>
   <img src="https://via.placeholder.com/400x200">
 
@@ -35,9 +35,9 @@
  
 <div class="myfooter">
   <h1 id="contatti"</h1></h1>
-  <h2 style="color:rgb(32, 2, 56);"</h2> <font face="Helvetica" size="5">Contatti</font><br /> </h2>
+  <h2 style="color:rgb(32, 2, 56);"</h2> <font face="Georgia" size="5">Contatti</font><br /> </h2>
   <body>
-    <font face="Times New Roman" size="3" style=" color: rgb(245, 208, 248)"> E-mail: reibaldierica@gmail.com <br/>
+    <font face="Impact" size="3" style=" color: rgb(245, 208, 248)"> E-mail: reibaldierica@gmail.com <br/>
       Instagram: @ericareibaldi <br>
       Telefono: 012 3456789 <br>
       Linkedin: Erica Reibaldi</font><br/>
