Times New Roman

--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
   <h1 id="contatti"</h1></h1>
   <h2 style="color:rgb(32, 2, 56);"</h2> <font face="Georgia" size="5">Contatti</font><br /> </h2>
   <body>
-    <font face="Impact" size="3" style=" color: rgb(245, 208, 248)"> E-mail: reibaldierica@gmail.com <br/>
+    <font face="Times New Roman" size="3" style=" color: rgb(245, 208, 248)"> E-mail: reibaldierica@gmail.com <br/>
       Instagram: @ericareibaldi <br>
       Telefono: 012 3456789 <br>
       Linkedin: Erica Reibaldi</font><br/>
