--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <a href="#dovetrovarmi">Dove trovarmi</a>
     <a href="#contatti">Contatti</a>
   </div>
-  
+
 <div class="mybody">
   <h1 id="chisono"</h1
   <h2> Chi sono </font><br /> </h2>
@@ -27,7 +27,7 @@
   <h2> Progetti</h2>
 
   <h1 id="dovetrovarmi"</h1>
-  <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5">Dove trovarmi</font><br /> </h2>
+  <h2>Dove trovarmi</font><br /> </h2>
   <p> Via abc 123, Torino, 10024 </p>
   <img src="https://via.placeholder.com/400x200">
 
