--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
     Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.  </p>
   
   <h1 id="Progetti"</h1
-  <h2> Progetti</h2>
+  <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5"> Progetti</h2>
 
   <h1 id="dovetrovarmi"</h1>
   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5">Dove trovarmi</font><br /> </h2>
