--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
 
  
 <div class="myfooter">
-  <h1 id="contatti"</h1></h1>
+  <h1 id="contatti"</h1>
   <h2 style="color:rgb(32, 2, 56);"</h2> <font face="Georgia" size="5">Contatti</font><br /> </h2>
   <body>
     <font face="Times New Roman" size="3" style=" color: rgb(245, 208, 248)"> E-mail: reibaldierica@gmail.com <br/>
