--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="Index.css">
   <title>Erica Reibaldi Portfolio</title>
 </head>
 
