--- a/Index.html
+++ b/Index.html
@@ -41,5 +41,17 @@
       Linkedin: Erica Reibaldi</font><br/>
 </div>
 
+<section id="contact" class="content-box">
+  <h2>Contatti</h2>
+  <div class="contact-form">
+      <form action="submit.php" method="POST">
+          <input type="text" name="name" placeholder="Il tuo nome" required>
+          <input type="email" name="email" placeholder="La tua email" required>
+          <textarea name="message" placeholder="Il tuo messaggio" rows="6" required></textarea>
+          <button type="submit">Invia</button>
+      </form>
+  </div>
+</section>
+
 </body>
 </html>
