--- a/Index.html
+++ b/Index.html
@@ -15,14 +15,14 @@
     <a href="#contatti">Contatti</a>
   </div>
 <div class="mybody">
-  <h1 id="chisono"</h1
+  <h1 id="chisono"></h1>
   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5">Chi sono </font><br /> </h2>
   <p> Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio, ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano delle storie attraverso la mia visione della moda.
     Scoprite il mio portfolio online, una vetrina virtuale dei miei progetti più recenti. 
     Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
     Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.  </p>
   
-  <h1 id="Progetti"</h1
+  <h1 id="Progetti">gagaga</h1>
   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5"> Progetti</font><br /> </h2>
 
   <h1 id="dovetrovarmi"</h1>
