--- a/Index.html
+++ b/Index.html
@@ -22,18 +22,18 @@
     Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
     Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.  </p>
   
-  <h1 id="Progetti">gagaga</h1>
+  <h1 id="Progetti"></h1>
   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5"> Progetti</font><br /> </h2>
 
-  <h1 id="dovetrovarmi"</h1>
+  <h1 id="dovetrovarmi"></h1>
   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5">Dove trovarmi</font><br /> </h2>
   <p> Via abc 123, Torino, 10024 </p>
   <img src="https://via.placeholder.com/400x200">
 
  
 <div class="myfooter">
-  <h1 id="contatti"</h1>
-  <h2 style="color:rgb(32, 2, 56);"</h2> <font face="Georgia" size="5">Contatti</font><br /> </h2>
+  <h1 id="contatti"></h1>
+  <h2 style="color:rgb(32, 2, 56);"></h2> <font face="Georgia" size="5">Contatti</font><br /> </h2>
   <body>
     <font face="Times New Roman" size="3" style=" color: rgb(245, 208, 248)"> E-mail: reibaldierica@gmail.com <br/>
       Instagram: @ericareibaldi <br>
