--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
   
   <h1 id="Progetti"></h1>
   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5"> Progetti</font><br /> </h2>
-
+  <p>Ecco i miei progetti più recenti</p>
   <h1 id="dovetrovarmi"></h1>
   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5">Dove trovarmi</font><br /> </h2>
   <p> Via abc 123, Torino, 10024 </p>
