--- a/Index.html
+++ b/Index.html
@@ -28,8 +28,7 @@
   <h1 id="dovetrovarmi"></h1>
   <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5">Dove trovarmi</font><br /> </h2>
   <p> Via abc 123, Torino, 10024 </p>
-  <img src="https://via.placeholder.com/400x200">
-
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90163.43603670898!2d7.59301843175377!3d45.073475149807045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d0cc3ed5cdf%3A0x405e67d473c94e0!2sTorino%20TO!5e0!3m2!1sit!2sit!4v1716819743609!5m2!1sit!2sit" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
  
 <div class="myfooter">
   <h1 id="contatti"></h1>
