--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
     <font face="Times New Roman" size="3" style=" color: rgb(245, 208, 248)"> E-mail: reibaldierica@gmail.com <br/>
       Instagram: @ericareibaldi <br>
       Telefono: 012 3456789 <br>
-      Linkedin: Erica Reibaldi</font><br/>
+      Linked-in: Erica Reibaldi</font><br/>
 </div>
 
 </body>
