--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,20 @@
     <font face="Times New Roman" size="3" style=" color: rgb(245, 208, 248)"> E-mail: reibaldierica@gmail.com <br/>
       Instagram: @ericareibaldi <br>
       Telefono: 012 3456789 <br>
-      Linked-in: Erica Reibaldi</font><br/>
+      Linked-in: Erica Reibaldi</font><br/><br/>
+</div>
+
+<div class="form">
+      <form action="/action.php" target=”_blank”>
+        <label for="fname">Nome:</label><br>
+        <input type="text" id="fname" name="fname" value=""><br>
+        <label for="lname">Cognome:</label><br>
+        <input type="text" id="lname" name="lname" value=""><br>
+        <label for="lname">E-mail:</label><br>
+        <input type="text" id="lname" name="lname" value=""><br><br>
+        <input type="submit" value="conferma">
+      </form>
+    
 </div>
 
 </body>
