--- a/Index.html
+++ b/Index.html
@@ -16,32 +16,21 @@
   </div>
 <div class="mybody">
   <h1 id="chisono"></h1>
-  <h2 style="color:rgb(44, 1, 80);"> <font face="Georgia" size="5">Chi sono </font><br /> </h2>
+  <h2>Chi sono </h2>
   <p> Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio, ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano delle storie attraverso la mia visione della moda.
     Scoprite il mio portfolio online, una vetrina virtuale dei miei progetti più recenti. 
     Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
     Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.  </p>
   
   <h1 id="Progetti"></h1>
-  <h2 style="color:rgb(44, 1, 80);"> <font face="Georgia" size="5"> Progetti</font><br/></h2>
+  <h2> Progetti</h2>
   <p>Ecco i miei progetti più recenti</p>
   <h1 id="dovetrovarmi"></h1>
-  <h2 style="color:rgb(44, 1, 80);"</h2> <font face="Georgia" size="5">Dove trovarmi</font><br /> </h2>
+  <h2>Dove trovarmi</h2>
   <p> Via abc 123, Torino, 10024 </p>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90163.43603670898!2d7.59301843175377!3d45.073475149807045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d0cc3ed5cdf%3A0x405e67d473c94e0!2sTorino%20TO!5e0!3m2!1sit!2sit!4v1716819743609!5m2!1sit!2sit" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
  
-<div class="myfooter">
-  <h1 id="contatti"></h1>
-  <h2 style="color:rgb(32, 2, 56);"> <font face="Georgia" size="5">Contatti</font><br /> </h2>
-  <body>
-    <font face="Times New Roman" size="3" style=" color: rgb(245, 208, 248)"> E-mail: reibaldierica@gmail.com <br/>
-      Instagram: @ericareibaldi <br>
-      Telefono: 012 3456789 <br>
-      Linked-in: Erica Reibaldi</font><br/><br/>
-</div>
-
-
-<div class="form">
+  <div class="form">
     <form action="/action.php" target=”_blank”>
       <label for="fname">Nome:</label><br>
       <input type="text" id="fname" name="fname" value=""><br>
@@ -53,6 +42,23 @@
       </form>
     
 </div>
+
+<div class="myfooter">
+  <h1 id="contatti"></h1>
+  <h2 style="color:rgb(32, 2, 56);">Contatti<br /> </h2>
+  <body>
+    <font face="Times New Roman" size="3" style=" color: rgb(245, 208, 248)"> E-mail: reibaldierica@gmail.com <br/>
+      Instagram: @ericareibaldi <br>
+      Telefono: 012 3456789 <br>
+      Linked-In: Erica Reibaldi</font><br/><br/>
+</div>
+
+<div class="myfooter"> 
+  <footer>
+
+  <p>&copy; 2024 Erica Reibaldi. Tutti i diritti riservati.</p>
+  <p><a href="mailto:info@miosito.com ">Contattaci</a> | <a href="#">Privacy Policy</a></p>
+</footer>
 
 </body>
 </html>
