--- a/Index.html
+++ b/Index.html
@@ -45,12 +45,12 @@
 
 <div class="myfooter">
   <h1 id="contatti"></h1>
-  <h2 style="color:rgb(32, 2, 56);">Contatti<br /> </h2>
+  <h2>Contatti</h2> 
   <body>
-    <font face="Times New Roman" size="3" style=" color: rgb(245, 208, 248)"> E-mail: reibaldierica@gmail.com <br/>
+      E-mail: reibaldierica@gmail.com <br/>
       Instagram: @ericareibaldi <br>
       Telefono: 012 3456789 <br>
-      Linked-In: Erica Reibaldi</font><br/><br/>
+      Linked-In: Erica Reibaldi<br/><br/>
 </div>
 
 <div class="myfooter"> 
