--- a/Index.html
+++ b/Index.html
@@ -7,13 +7,13 @@
 </head>
 
 <body>
-  <div  class="myheader">
+  <header>
     <img id="logo" src="https://i.pinimg.com/564x/7d/a2/0c/7da20c4a27941504a8ee4502be1bff73.jpg">
     <a href="#chisono">Chi sono</a>
     <a href="#Progetti">Progetti</a>
     <a href="#dovetrovarmi">Dove trovarmi</a>
     <a href="#contatti">Contatti</a>
-  </div>
+  </header>
 <div class="mybody">
   <h1 id="chisono"></h1>
   <h2>Chi sono </h2>
