--- a/Index.html
+++ b/Index.html
@@ -7,57 +7,86 @@
 </head>
 
 <body>
+  <!-- Header section with navigation links -->
   <header>
-    <img id="logo" src="https://i.pinimg.com/564x/7d/a2/0c/7da20c4a27941504a8ee4502be1bff73.jpg">
-    <a href="#chisono">Chi sono</a>
-    <a href="#Progetti">Progetti</a>
-    <a href="#dovetrovarmi">Dove trovarmi</a>
-    <a href="#contatti">Contatti</a>
+    <img id="logo" src="https://i.pinimg.com/564x/7d/a2/0c/7da20c4a27941504a8ee4502be1bff73.jpg" alt="Logo Erica Reibaldi">
+    <nav>
+      <a href="#chisono">Chi sono</a>
+      <a href="#Progetti">Progetti</a>
+      <a href="#dovetrovarmi">Dove trovarmi</a>
+      <a href="#contatti">Contatti</a>
+    </nav>
   </header>
-<div class="mybody">
-  <h1 id="chisono"></h1>
-  <h2>Chi sono </h2>
-  <p> Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio, ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano delle storie attraverso la mia visione della moda.
-    Scoprite il mio portfolio online, una vetrina virtuale dei miei progetti più recenti. 
-    Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro i miei progetti.
-    Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.  </p>
-  
-  <h1 id="Progetti"></h1>
-  <h2> Progetti</h2>
-  <p>Ecco i miei progetti più recenti</p>
-  <h1 id="dovetrovarmi"></h1>
-  <h2>Dove trovarmi</h2>
-  <p> Via abc 123, Torino, 10024 </p>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90163.43603670898!2d7.59301843175377!3d45.073475149807045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d0cc3ed5cdf%3A0x405e67d473c94e0!2sTorino%20TO!5e0!3m2!1sit!2sit!4v1716819743609!5m2!1sit!2sit" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
- 
-  <div class="form">
-    <form action="/action.php" target=”_blank”>
-      <label for="fname">Nome:</label><br>
-      <input type="text" id="fname" name="fname" value=""><br>
-      <label for="lname">Cognome:</label><br>
-      <input type="text" id="lname" name="lname" value=""><br>
-      <label for="lname">E-mail:</label><br>
-      <input type="text" id="lname" name="lname" value=""><br><br>
-      <input type="submit" value="conferma">
+
+  <div class="mybody">
+    <!-- Section "Chi sono" -->
+    <section id="chisono">
+      <h2>Chi sono</h2>
+      <p>
+        Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio,
+        ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano
+        delle storie attraverso la mia visione della moda. Scoprite il mio portfolio online, una vetrina virtuale dei miei 
+        progetti più recenti. Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro 
+        i miei progetti. Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.
+      </p>
+    </section>
+
+    <!-- Section "Progetti" -->
+    <section id="Progetti">
+      <h2>Progetti</h2>
+      <p>Ecco i miei progetti più recenti</p>
+    </section>
+
+    <!-- Section "Dove trovarmi" -->
+    <section id="dovetrovarmi">
+      <h2>Dove trovarmi</h2>
+      <p>Via abc 123, Torino, 10024</p>
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90163.43603670898!2d7.59301843175377!3d45.073475149807045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d0cc3ed5cdf%3A0x405e67d473c94e0!2sTorino%20TO!5e0!3m2!1sit!2sit!4v1716819743609!5m2!1sit!2sit" 
+        width="400" 
+        height="200" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </section>
+
+    <!-- Contact form -->
+    <section class="form">
+      <form action="/action.php" target="_blank">
+        <label for="fname">Nome:</label><br>
+        <input type="text" id="fname" name="fname" value=""><br>
+        <label for="lname">Cognome:</label><br>
+        <input type="text" id="lname" name="lname" value=""><br>
+        <label for="email">E-mail:</label><br>
+        <input type="email" id="email" name="email" value=""><br><br>
+        <input type="submit" value="Conferma">
       </form>
-    
-</div>
+    </section>
+  </div>
 
-<div class="myfooter">
-  <h1 id="contatti"></h1>
-  <h2>Contatti</h2> 
-  <body>
-      E-mail: reibaldierica@gmail.com <br/>
-      Instagram: @ericareibaldi <br>
-      Telefono: 012 3456789 <br>
-      Linked-In: Erica Reibaldi<br/><br/>
-</div>
+  <!-- Footer with contact information -->
+  <div class="myfooter">
+    <section id="contatti">
+      <h2>Contatti</h2>
+      <p>
+        E-mail: <a href="mailto:reibaldierica@gmail.com">reibaldierica@gmail.com</a><br>
+        Instagram: <a href="https://instagram.com/ericareibaldi" target="_blank">@ericareibaldi</a><br>
+        Telefono: 012 3456789<br>
+        LinkedIn: <a href="https://linkedin.com/in/ericareibaldi" target="_blank">Erica Reibaldi</a>
+      </p>
+    </section>
+  </div>
 
-<div class="myfooter"> 
-  <footer>
-  <p>&copy; 2024 Erica Reibaldi. Tutti i diritti riservati.</p>
-  <p><a href="mailto:info@miosito.com ">Contattaci</a> | <a href="#">Privacy Policy</a></p>
-</footer>
+  <!-- Footer with copyright information -->
+  <footer class="myfooter">
+    <p>&copy; 2024 Erica Reibaldi. Tutti i diritti riservati.</p>
+    <p>
+      <a href="mailto:info@miosito.com">Contattaci</a> | 
+      <a href="#">Privacy Policy</a>
+    </p>
+  </footer>
 
 </body>
 </html>
