--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
       <p>
         Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio,
         ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano
-        delle storie attraverso la mia visione della moda. Scoprite il mio portfolio online, una vetrina virtuale dei miei 
+        delle storie attraverso la mia visione della moda. <br> Scoprite il mio portfolio online, una vetrina virtuale dei miei 
         progetti più recenti. Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro 
         i miei progetti. Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.
       </p>
@@ -83,7 +83,7 @@
   <footer class="myfooter">
     <p>&copy; 2024 Erica Reibaldi. Tutti i diritti riservati.</p>
     <p>
-      <a href="mailto:info@miosito.com">Contattaci</a> | 
+      <a href="mailto:info@miosito.com">Contatti</a> | 
       <a href="#">Privacy Policy</a>
     </p>
   </footer>
