--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
   <!-- Header section with navigation links -->
   <header>
     <img id="logo" src="https://i.pinimg.com/564x/7d/a2/0c/7da20c4a27941504a8ee4502be1bff73.jpg" alt="Logo Erica Reibaldi">
-    <nav>
+    <nav id="menu">
       <a href="#chisono">Chi sono</a>
       <a href="#Progetti">Progetti</a>
       <a href="#dovetrovarmi">Dove trovarmi</a>
