--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
     <!-- Section "Progetti" -->
     <section id="Progetti">
       <h2>Progetti</h2>
-      <p>Ecco i miei progetti più recenti</p>
+      <p>Ecco i miei progetti più recenti.</p>
     </section>
 
     <!-- Section "Dove trovarmi" -->
