--- a/Index.html
+++ b/Index.html
@@ -30,6 +30,7 @@
         i miei progetti. Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.
       </p>
     </section>
+  </div>  
 
     <!-- Section "Progetti" -->
     <section id="Progetti">
