--- a/Index.html
+++ b/Index.html
@@ -32,15 +32,27 @@
     </section>
   </div>  
 
+  <div class="Progetti">
     <!-- Section "Progetti" -->
-    <section id="Progetti">
-      <h2>Progetti</h2>
-      <p>Ecco i miei progetti più recenti.</p>
-    </section>
+      <h2 id="Progetti">Progetti</h2>
+      <p>Ecco i miei progetti più recenti.
+      </p>
+  </div>
 
-    <!-- Section "Dove trovarmi" -->
-    <section id="dovetrovarmi">
-      <h2>Dove trovarmi</h2>
+  <!-- Footer with contact information -->
+  <div class="info">
+    <div>
+      <h2 id="contatti">Contatti</h2>
+      <p>
+        E-mail: <a href="mailto:reibaldierica@gmail.com">reibaldierica@gmail.com</a><br>
+        Instagram: <a href="https://instagram.com/ericareibaldi" target="_blank">@ericareibaldi</a><br>
+        Telefono: 012 3456789<br>
+        LinkedIn: <a href="https://linkedin.com/in/ericareibaldi" target="_blank">Erica Reibaldi</a>
+      </p>
+    </div>
+
+    <div>
+      <h2 id="dovetrovarmi">Dove trovarmi</h2>
       <p>Via abc 123, Torino, 10024</p>
       <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90163.43603670898!2d7.59301843175377!3d45.073475149807045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d0cc3ed5cdf%3A0x405e67d473c94e0!2sTorino%20TO!5e0!3m2!1sit!2sit!4v1716819743609!5m2!1sit!2sit" 
@@ -51,35 +63,24 @@
         loading="lazy" 
         referrerpolicy="no-referrer-when-downgrade">
       </iframe>
-    </section>
-
-    <!-- Contact form -->
-    <section class="form">
-      <form action="/action.php" target="_blank">
-        <label for="fname">Nome:</label><br>
-        <input type="text" id="fname" name="fname" value=""><br>
-        <label for="lname">Cognome:</label><br>
-        <input type="text" id="lname" name="lname" value=""><br>
-        <label for="email">E-mail:</label><br>
-        <input type="email" id="email" name="email" value=""><br><br>
-        <input type="submit" value="Conferma">
-      </form>
-    </section>
+    </div>
   </div>
 
-  <!-- Footer with contact information -->
-  <div class="myfooter">
-    <section id="contatti">
-      <h2>Contatti</h2>
-      <p>
-        E-mail: <a href="mailto:reibaldierica@gmail.com">reibaldierica@gmail.com</a><br>
-        Instagram: <a href="https://instagram.com/ericareibaldi" target="_blank">@ericareibaldi</a><br>
-        Telefono: 012 3456789<br>
-        LinkedIn: <a href="https://linkedin.com/in/ericareibaldi" target="_blank">Erica Reibaldi</a>
-      </p>
-    </section>
-  </div>
-
+  <!-- Contact form -->
+  <section class="form">
+    <form action="/action.php" target="_blank">
+      <label for="fname">Nome:</label><br>
+      <input type="text" id="fname" name="fname" value=""><br>
+      <label for="lname">Cognome:</label><br>
+      <input type="text" id="lname" name="lname" value=""><br>
+      <label for="email">E-mail:</label><br>
+      <input type="email" id="email" name="email" value=""><br><br>
+      <input type="submit" value="Conferma">
+    </form>
+  </section>
+</div>
+      
+  
   <!-- Footer with copyright information -->
   <footer class="myfooter">
     <p>&copy; 2024 Erica Reibaldi. Tutti i diritti riservati.</p>
