--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="Index.css">
   <title>Erica Reibaldi Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -20,8 +21,7 @@
 
   <div class="mybody">
     <!-- Section "Chi sono" -->
-    <section id="chisono">
-      <h2>Chi sono</h2>
+      <h2 id="chisono">Chi sono</h2>
       <p>
         Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio,
         ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano
@@ -29,16 +29,15 @@
         progetti più recenti. Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro 
         i miei progetti. Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.
       </p>
-    </section>
   </div>  
 
-  <div class="Progetti">
     <!-- Section "Progetti" -->
+    <div>
       <h2 id="Progetti">Progetti</h2>
       <p>Ecco i miei progetti più recenti.
       </p>
-  </div>
-
+    </div>
+ 
   <!-- Footer with contact information -->
   <div class="info">
     <div>
