--- a/Index.html
+++ b/Index.html
@@ -32,10 +32,9 @@
   </div>  
 
     <!-- Section "Progetti" -->
-    <div>
+    <div class="Progetti">
       <h2 id="Progetti">Progetti</h2>
-      <p>Ecco i miei progetti più recenti.
-      </p>
+      <p>Ecco i miei progetti più recenti.</p>
     </div>
  
   <!-- Footer with contact information -->
@@ -66,19 +65,16 @@
   </div>
 
   <!-- Contact form -->
-  <section class="form">
-    <form action="/action.php" target="_blank">
-      <label for="fname">Nome:</label><br>
-      <input type="text" id="fname" name="fname" value=""><br>
-      <label for="lname">Cognome:</label><br>
-      <input type="text" id="lname" name="lname" value=""><br>
-      <label for="email">E-mail:</label><br>
-      <input type="email" id="email" name="email" value=""><br><br>
-      <input type="submit" value="Conferma">
+<pre>
+  <div id="form">
+    <form action="/action.php" target=”_blank”>
+    <input type="text" id="fname" name="fname" value="Nome"><br>
+    <input type="text" id="fname" name="fname" value="Cognome"><br>
+    <input type="text" id="fname" name="fname" value="E-mail"><br>
+    <input type="submit" value="Conferma">
     </form>
-  </section>
-</div>
-      
+ </div>
+</pre>    
   
   <!-- Footer with copyright information -->
   <footer class="myfooter">
