--- a/Index.html
+++ b/Index.html
@@ -19,9 +19,9 @@
     </nav>
   </header>
 
-  <div class="mybody">
+  <div class="chisono">
     <!-- Section "Chi sono" -->
-      <h2 id="chisono">Chi sono</h2>
+      <h2>Chi sono</h2>
       <p>
         Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio,
         ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano
@@ -32,15 +32,15 @@
   </div>  
 
     <!-- Section "Progetti" -->
-    <div class="Progetti">
-      <h2 id="Progetti">Progetti</h2>
+    <div class="progetti">
+      <h2>Progetti</h2>
       <p>Ecco i miei progetti più recenti.</p>
     </div>
  
   <!-- Footer with contact information -->
   <div class="info">
     <div>
-      <h2 id="contatti">Contatti</h2>
+      <h2>Contatti</h2>
       <p>
         E-mail: <a href="mailto:reibaldierica@gmail.com">reibaldierica@gmail.com</a><br>
         Instagram: <a href="https://instagram.com/ericareibaldi" target="_blank">@ericareibaldi</a><br>
@@ -50,7 +50,7 @@
     </div>
 
     <div>
-      <h2 id="dovetrovarmi">Dove trovarmi</h2>
+      <h2>Dove trovarmi</h2>
       <p>Via abc 123, Torino, 10024</p>
       <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90163.43603670898!2d7.59301843175377!3d45.073475149807045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d0cc3ed5cdf%3A0x405e67d473c94e0!2sTorino%20TO!5e0!3m2!1sit!2sit!4v1716819743609!5m2!1sit!2sit" 
