--- a/Index.html
+++ b/Index.html
@@ -57,18 +57,18 @@
     <input type="text" id="fname" name="fname" value="Nome"><br>
     <input type="text" id="fname" name="fname" value="Cognome"><br>
     <input type="text" id="fname" name="fname" value="E-mail"><br>
+    <input type="text" id="fname" name="fname" value="Messaggio"><br>
     <input type="submit" value="Conferma">
     </form>
  </div>
 </pre>  
 </div>
 
-<div>
+<div id="dovetrovarmi">
   <h2>Dove trovarmi</h2>
       <p>Via abc 123, Torino, 10024</p>
       <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90163.43603670898!2d7.59301843175377!3d45.073475149807045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d0cc3ed5cdf%3A0x405e67d473c94e0!2sTorino%20TO!5e0!3m2!1sit!2sit!4v1716819743609!5m2!1sit!2sit" 
-        width="400" 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d90163.43603670898!2d7.59301843175377!3d45.073475149807045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d0cc3ed5cdf%3A0x405e67d473c94e0!2sTorino%20TO!5e0!3m2!1sit!2sit!4v1716819743609!5m2!1sit!2sit"
         height="200" 
         style="border:0;" 
         allowfullscreen="" 
