--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,7 @@
         progetti più recenti. Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro 
         i miei progetti. Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.
       </p>
+      <img> 
   </div>  
 
     <!-- Section "Progetti" -->
