--- a/Index.html
+++ b/Index.html
@@ -21,15 +21,18 @@
 
   <div class="chisono">
     <!-- Section "Chi sono" -->
-      <h2>Chi sono</h2>
+    <div> <img src="Stitched-Paper Favor Wrapping.jpeg" alt="Foto Chi Sono">
+    </div>  
+    <div>
+    <h2>Chi sono</h2>
       <p>
         Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio,
         ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano
         delle storie attraverso la mia visione della moda. <br> Scoprite il mio portfolio online, una vetrina virtuale dei miei 
         progetti più recenti. Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro 
         i miei progetti. Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.
-      </p>
-      <img> 
+      </p> 
+    </div>
   </div>  
 
     <!-- Section "Progetti" -->
