--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
     <div>
     <h2>Chi sono</h2>
       <p>
-        Studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio,
+        Sono una studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio,
         ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano
         delle storie attraverso la mia visione della moda. <br> Scoprite il mio portfolio online, una vetrina virtuale dei miei 
         progetti più recenti. Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro 
