--- a/Index.html
+++ b/Index.html
@@ -39,6 +39,7 @@
     <div class="progetti">
       <h2>Progetti</h2>
       <p>Ecco i miei progetti più recenti.</p>
+    <div> <img src="Stitched-Paper Favor Wrapping.jpeg" alt="Foto Chi Sono"></div>
       
     </div>
  
