--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,8 @@
     <div class="progetti">
       <h2>Progetti</h2>
       <p>Ecco i miei progetti più recenti.</p>
-    <div> <img src="Stitched-Paper Favor Wrapping.jpeg" alt="Foto Chi Sono"></div>
+    <div> 
+      <img src="Stitched-Paper Favor Wrapping.jpeg" alt="Foto Chi Sono"></div>
       
     </div>
  
