--- a/Index.html
+++ b/Index.html
@@ -21,8 +21,10 @@
 
   <div class="chisono">
     <!-- Section "Chi sono" -->
-    <div> <img src="Stitched-Paper Favor Wrapping.jpeg" alt="Foto Chi Sono">
-    </div>  
+    <div> 
+      <img src="Stitched-Paper Favor Wrapping.jpeg" alt="Foto Chi Sono">
+    </div> 
+     
     <div>
     <h2>Chi sono</h2>
       <p>
@@ -40,7 +42,7 @@
       <h2>Progetti</h2>
       <p>Ecco i miei progetti più recenti.</p>
     <div> 
-      <img src="Stitched-Paper Favor Wrapping.jpeg" alt="Foto Chi Sono"></div>
+      <img src="Progetto 1/2.jpg" alt="Eden"></div>
       
     </div>
  
@@ -64,7 +66,7 @@
     <input type="text" id="fname" name="fname" value="Cognome"><br>
     <input type="text" id="fname" name="fname" value="E-mail"><br>
     <input type="text" id="fname" name="fname" value="Messaggio"><br>
-    <input type="submit" value="Conferma">
+    <input type="submit" value="Invia">
     </form>
  </div>
 </pre>  
@@ -91,6 +93,6 @@
       <a href="#">Privacy Policy</a>
     </p>
   </footer>
-
+  
 </body>
 </html>
