--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
     <div> 
       <img src="Stitched-Paper Favor Wrapping.jpeg" alt="Foto Chi Sono">
     </div> 
-     
+
     <div>
     <h2>Chi sono</h2>
       <p>
@@ -42,8 +42,17 @@
       <h2>Progetti</h2>
       <p>Ecco i miei progetti più recenti.</p>
     <div> 
+      <h2> Editoriale - Eden</h2>
+      <p> In questo editoriale, ispirato al Giardino dell’Eden, Eva è tentata da beni materiali e di lusso, cadendo vittima del consumismo, che la circonda con una montagna di indumenti superflui e insignificanti ma che sul momento le conferiscono sicurezza, provocazione e audacia. </br>
+        Il dramma si manifesta nel momento in cui Eva realizza il loro vuoto significato e si pente degli acquisti compulsivi e non necessari; per questo ora si abbandona tra i vestiti sparsi a terra e mostra un'espressione di pentimento e malinconia.</br>
+        L’invito è alla riflessione sul valore reale degli oggetti e sulla  soddisfazione effimera che il consumismo offre, mentre il vero benessere deriva dalla consapevolezza e dalla ricerca di una felicità autentica e sostenibile.</p>
       <img src="Progetto 1/2.jpg" alt="Eden"></div>
-      
+      <img src="Progetto 1/moodboard.jpg" alt="moodboard">
+      <img src="Progetto 1/keywords.jpg" alt="keywords">
+      <img src="Progetto 1/Luci e stile.jpg" alt="luci">
+      <img src="Progetto 1/foto finali.jpg" alt="set1">
+      <img src="Progetto 1/foto finali (2).jpg" alt="set2">
+    </div>
     </div>
  
   <!-- Footer with contact information -->
