--- a/Index.html
+++ b/Index.html
@@ -30,9 +30,9 @@
       <p>
         Sono una studentessa di Fashion Design che ha fatto della creatività la sua passione. Attraverso il mio percorso di studio,
         ho affinato le mie competenze nella progettazione, modellistica e confezione, dando vita a pezzi unici che raccontano
-        delle storie attraverso la mia visione della moda. <br> Scoprite il mio portfolio online, una vetrina virtuale dei miei 
+        delle storie attraverso la mia visione della moda. </br> </br>Scoprite il mio portfolio online, una vetrina virtuale dei miei 
         progetti più recenti. Condivido il mio processo creativo in un luogo dove potrete conoscere meglio la mente dietro 
-        i miei progetti. </br> </br> Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.
+        i miei progetti. </br> Sono sempre aperta a nuove collaborazioni e progetti stimolanti per lavorare insieme.
       </p> 
     </div>
   </div>  
