--- a/Index.html
+++ b/Index.html
@@ -64,8 +64,8 @@
 
   <div id="Tarocchi">
     <h2>Tarocchi</h2>
-    <id id="testo1"> Concept </id>
-      <img id="foto1" src="Progetto 1/2.jpg" alt="Eden">
+    <id id="testo1"> Questo mazzo di carte si ispira ad alcune delle più affascinanti collezioni della stilista cinese Guo Pei, per celebrare i suoi capolavori attraverso l'interpretazione dei 22 Arcani Maggiori.</id>
+      <img id="foto1" src="Tarocchi copertina.jpg" alt="Eden">
      
   </div>
 
