--- a/Index.html
+++ b/Index.html
@@ -93,7 +93,7 @@
     <input type="text" id="fname" name="fname" value="Cognome"><br>
     <input type="text" id="fname" name="fname" value="E-mail"><br>
     <input type="text" id="fname" name="fname" value="Messaggio"><br>
-    <input type="submit" value="Invia">
+    <input type="submit" id="submit" value="Invia">
     </form>
  </div>
 </pre>  
