--- a/Index.html
+++ b/Index.html
@@ -105,7 +105,7 @@
     <!-- X di chiusura -->
     <span style="float: right; cursor: pointer;" onclick="popup()">X</span>
     <h1>SEGUIMI</h1>
-    <p>Visita il mio profilo Instagram per rimanere aggiornato!</p>
+    <p>Visita il mio profilo Instagram per rimanere sempre aggiornato!</p>
 </div>
 
 <script>
