--- a/Index.html
+++ b/Index.html
@@ -65,8 +65,13 @@
   <div id="Tarocchi">
     <h2>Tarocchi</h2>
     <id id="testo1"> Questo mazzo di carte si ispira ad alcune delle più affascinanti collezioni della stilista cinese Guo Pei, per celebrare i suoi capolavori attraverso l'interpretazione dei 22 Arcani Maggiori.</id>
-      <img id="foto1" src="Tarocchi copertina.jpg" alt="Eden">
-     
+      <img id="foto1" src="Tarocchi copertina.jpg" alt="Tarocchi">
+      <img id="foto1" src="Tarocchi/Impaginazione carte3.png" alt="Carro">
+      <img id="foto1" src="Tarocchi/Impaginazione carte6.png" alt="Papessa">
+      <img id="foto1" src="Tarocchi/Impaginazione carte7.png" alt="Angelo">
+      <img id="foto1" src="Tarocchi/Impaginazione carte9.png" alt="Morte">
+      <img id="foto1" src="Tarocchi/Impaginazione carte10.png" alt="Luna">
+      
   </div>
 
 </div>
