--- a/Index.html
+++ b/Index.html
@@ -56,8 +56,9 @@
   </div>
 
   <div id="CollezioneA">
-    <h2> Collezione A</h2>
-    <id id="testo2"> Concept </id>
+    <h2> DUALITY</h2>
+    <id id="testo2"> "il tema di questa collezione si ispira alla dualità che risiede nelle donne, figure dall’animo benevolo e nobile ma allo stesso tempo contraddistinte da una forza stravolgente che permette loro di affrontare sfide spesso molto insidiose e complicate senza accantonare e rinunciare però, al loro lato più fragile e delicato, rendendosi così anche vulnerabili il mio proposito è quindi mettere in risalto e celebrare questo contrasto tra forze opposte che vive nell’animo femminile e che permette loro di combattere le battaglie che gli si mostrano davanti spinte da determinazione e passione, con forza mentale e sentimenti puri tali da rischiare tutto ciò a cui esse sono legate;
+      ma anche per fare onore alle debolezze e alle fragilità intrinseche dello spirito che spesso vengono nascoste e rinnegate ma che in realtà possono essere trasformate in forza per trionfare." </id>
     <img id="foto2" src="Progetto 1/2.jpg" alt="Eden">
   </div>
 
@@ -65,7 +66,7 @@
   <div id="Tarocchi">
     <h2>Tarocchi</h2>
     <id id="testo1"> Questo mazzo di carte si ispira ad alcune delle più affascinanti collezioni della stilista cinese Guo Pei, per celebrare i suoi capolavori attraverso l'interpretazione dei 22 Arcani Maggiori.</id>
-      <img id="foto1" src="Tarocchi copertina.jpg" alt="Tarocchi">
+      <img id="foto1" src="Tarocchi/Tarocchi copertina.jpg" alt="Tarocchi">
       <img id="foto1" src="Tarocchi/Impaginazione carte3.png" alt="Carro">
       <img id="foto1" src="Tarocchi/Impaginazione carte6.png" alt="Papessa">
       <img id="foto1" src="Tarocchi/Impaginazione carte7.png" alt="Angelo">
