--- a/Index.html
+++ b/Index.html
@@ -77,7 +77,6 @@
 
 </div>
     
- 
 
   <!-- Footer with contact information -->
   <div class="info">
@@ -113,7 +112,7 @@
     <h1>SEGUIMI</h1>
     <p>Visita il mio profilo Instagram per rimanere sempre aggiornato!</p>
 </div>
-
+<script src="scripts.js"></script>
 <script>
     function popup() {
         var popup = document.getElementById("popup");
