--- a/Index.html
+++ b/Index.html
@@ -56,7 +56,7 @@
   </div>
 
   <div id="CollezioneA">
-    <h2> DUALITY</h2>
+    <h2> Duality</h2>
     <id id="testo2"> "il tema di questa collezione si ispira alla dualità che risiede nelle donne, figure dall’animo benevolo e nobile ma allo stesso tempo contraddistinte da una forza stravolgente che permette loro di affrontare sfide spesso molto insidiose e complicate senza accantonare e rinunciare però, al loro lato più fragile e delicato, rendendosi così anche vulnerabili il mio proposito è quindi mettere in risalto e celebrare questo contrasto tra forze opposte che vive nell’animo femminile e che permette loro di combattere le battaglie che gli si mostrano davanti spinte da determinazione e passione, con forza mentale e sentimenti puri tali da rischiare tutto ciò a cui esse sono legate;
       ma anche per fare onore alle debolezze e alle fragilità intrinseche dello spirito che spesso vengono nascoste e rinnegate ma che in realtà possono essere trasformate in forza per trionfare." </id> </br>
     <img id="foto2" src="Progetto 1/2.jpg" alt="Eden">
