--- a/Index.html
+++ b/Index.html
@@ -42,18 +42,22 @@
   <h2>Progetti</h2>
   <p>Ecco i miei progetti più recenti.</p>
   
+<div class="container1">
   <div id="Eden">
-    <h2> Editoriale Eden</h2>
-    <id id="testo1"> Progetto di Fashion Styling: "In questo editoriale, ispirato al Giardino dell’Eden, Eva è tentata da beni materiali e di lusso, cadendo vittima del consumismo, che la circonda con una montagna di indumenti superflui e insignificanti ma che sul momento le conferiscono sicurezza, provocazione e audacia. </br>
+    <h2>Editoriale Eden</h2>
+    <id id="testo1"> 
+    <h2>Editoriale Eden</h2>
+    <p> Progetto di Fashion Styling: "In questo editoriale, ispirato al Giardino dell’Eden, Eva è tentata da beni materiali e di lusso, cadendo vittima del consumismo, che la circonda con una montagna di indumenti superflui e insignificanti ma che sul momento le conferiscono sicurezza, provocazione e audacia. </br>
     Il dramma si manifesta nel momento in cui Eva realizza il loro vuoto significato e si pente degli acquisti compulsivi e non necessari; per questo ora si abbandona tra i vestiti sparsi a terra e mostra un'espressione di pentimento e malinconia.</br>
-    L’invito è alla riflessione sul valore reale degli oggetti e sulla  soddisfazione effimera che il consumismo offre, mentre il vero benessere deriva dalla consapevolezza e dalla ricerca di una felicità autentica e sostenibile." </id></br>
+    L’invito è alla riflessione sul valore reale degli oggetti e sulla  soddisfazione effimera che il consumismo offre, mentre il vero benessere deriva dalla consapevolezza e dalla ricerca di una felicità autentica e sostenibile." </p></br> </id>
+  </div>
     <img id="foto1" src="Progetto 1/2.jpg" alt="Eden">
     <img id="foto1" src="Progetto 1/moodboard.jpg" alt="moodboard">
     <img id="foto1" src="Progetto 1/keywords.jpg" alt="keywords">
     <img id="foto1" src="Progetto 1/Luci e stile.jpg" alt="luci">
     <img id="foto1" src="Progetto 1/foto finali.jpg" alt="set1">
     <img id="foto1" src="Progetto 1/foto finali (2).jpg" alt="set2">
-  </div>
+</div>
 
   <div id="CollezioneA">
     <h2> Duality</h2>
