--- a/Index.html
+++ b/Index.html
@@ -65,17 +65,18 @@
     <img id="foto2" src="Progetto 1/2.jpg" alt="Eden">
   </div>
 
-
+<div class=container3>
   <div id="Tarocchi">
-    <h2>Tarocchi</h2>
-    <id id="testo1"> Questo mazzo di carte si ispira ad alcune delle più affascinanti collezioni della stilista cinese Guo Pei, per celebrare i suoi capolavori attraverso l'interpretazione dei 22 Arcani Maggiori.</id></br>
+    <id id="testo1"> 
+      <h2>Tarocchi</h2>
+      <p>Questo mazzo di carte si ispira ad alcune delle più affascinanti collezioni della stilista cinese Guo Pei, per celebrare i suoi capolavori attraverso l'interpretazione dei 22 Arcani Maggiori.</p></id></br>
+  </div>
       <img id="foto3" src="Tarocchi/Tarocchi copertina.jpg" alt="Tarocchi">
       <img id="foto3" src="Tarocchi/Impaginazione carte3.png" alt="Carro">
       <img id="foto3" src="Tarocchi/Impaginazione carte6.png" alt="Papessa">
       <img id="foto3" src="Tarocchi/Impaginazione carte7.png" alt="Angelo">
       <img id="foto3" src="Tarocchi/Impaginazione carte9.png" alt="Morte">
       <img id="foto3" src="Tarocchi/Impaginazione carte10.png" alt="Luna">
-      
   </div>
 
 </div>
