--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,7 @@
     <h2>Editoriale Eden</h2>
     <p> Progetto di Fashion Styling: "In questo editoriale, ispirato al Giardino dell’Eden, Eva è tentata da beni materiali e di lusso, cadendo vittima del consumismo, che la circonda con una montagna di indumenti superflui e insignificanti ma che sul momento le conferiscono sicurezza, provocazione e audacia. </br>
     Il dramma si manifesta nel momento in cui Eva realizza il loro vuoto significato e si pente degli acquisti compulsivi e non necessari; per questo ora si abbandona tra i vestiti sparsi a terra e mostra un'espressione di pentimento e malinconia.</br>
-    L’invito è alla riflessione sul valore reale degli oggetti e sulla  soddisfazione effimera che il consumismo offre, mentre il vero benessere deriva dalla consapevolezza e dalla ricerca di una felicità autentica e sostenibile." </p></br> </id>
+    L’invito è alla riflessione sul valore reale degli oggetti e sulla  soddisfazione effimera che il consumismo offre, mentre il vero benessere deriva dalla consapevolezza e dalla ricerca di una felicità autentica e sostenibile." </p> </id>
   </div>
     <img id="foto1" src="Progetto 1/2.jpg" alt="Eden">
     <img id="foto1" src="Progetto 1/moodboard.jpg" alt="moodboard">
@@ -58,11 +58,14 @@
     <img id="foto1" src="Progetto 1/foto finali (2).jpg" alt="set2">
 </div>
 
+<div class="container2">
   <div id="CollezioneA">
-    <h2> Duality</h2>
-    <id id="testo2"> "il tema di questa collezione si ispira alla dualità che risiede nelle donne, figure dall’animo benevolo e nobile ma allo stesso tempo contraddistinte da una forza stravolgente che permette loro di affrontare sfide spesso molto insidiose e complicate senza accantonare e rinunciare però, al loro lato più fragile e delicato, rendendosi così anche vulnerabili il mio proposito è quindi mettere in risalto e celebrare questo contrasto tra forze opposte che vive nell’animo femminile e che permette loro di combattere le battaglie che gli si mostrano davanti spinte da determinazione e passione, con forza mentale e sentimenti puri tali da rischiare tutto ciò a cui esse sono legate;
-      ma anche per fare onore alle debolezze e alle fragilità intrinseche dello spirito che spesso vengono nascoste e rinnegate ma che in realtà possono essere trasformate in forza per trionfare." </id> </br>
     <img id="foto2" src="Progetto 1/2.jpg" alt="Eden">
+    <id id="testo2"> 
+    <h2> Duality</h2>
+    <p> "il tema di questa collezione si ispira alla dualità che risiede nelle donne, figure dall’animo benevolo e nobile ma allo stesso tempo contraddistinte da una forza stravolgente che permette loro di affrontare sfide spesso molto insidiose e complicate senza accantonare e rinunciare però, al loro lato più fragile e delicato, rendendosi così anche vulnerabili il mio proposito è quindi mettere in risalto e celebrare questo contrasto tra forze opposte che vive nell’animo femminile e che permette loro di combattere le battaglie che gli si mostrano davanti spinte da determinazione e passione, con forza mentale e sentimenti puri tali da rischiare tutto ciò a cui esse sono legate;
+     ma anche per fare onore alle debolezze e alle fragilità intrinseche dello spirito che spesso vengono nascoste e rinnegate ma che in realtà possono essere trasformate in forza per trionfare." </p> </id> 
+  </div>
   </div>
 
 <div class=container3>
