--- a/Index.html
+++ b/Index.html
@@ -42,21 +42,14 @@
   <h2>Progetti</h2>
   <p>Ecco i miei progetti più recenti.</p>
   
-<div class="container">
-  <div id="Eden">
-    <div id="testo1"> 
-    <h2>Editoriale Eden</h2>
-    <p> Progetto di Fashion Styling: "In questo editoriale, ispirato al Giardino dell’Eden, Eva è tentata da beni materiali e di lusso, cadendo vittima del consumismo, che la circonda con una montagna di indumenti superflui e insignificanti ma che sul momento le conferiscono sicurezza, provocazione e audacia. </br>
-    Il dramma si manifesta nel momento in cui Eva realizza il loro vuoto significato e si pente degli acquisti compulsivi e non necessari; per questo ora si abbandona tra i vestiti sparsi a terra e mostra un'espressione di pentimento e malinconia.</br>
-    L’invito è alla riflessione sul valore reale degli oggetti e sulla  soddisfazione effimera che il consumismo offre, mentre il vero benessere deriva dalla consapevolezza e dalla ricerca di una felicità autentica e sostenibile." </p> 
-    </div>
-  </div>
-    <img id="foto1" src="Progetto 1/2.jpg" alt="Eden">
-    <img id="foto1" src="Progetto 1/moodboard.jpg" alt="moodboard">
-    <img id="foto1" src="Progetto 1/keywords.jpg" alt="keywords">
-    <img id="foto1" src="Progetto 1/Luci e stile.jpg" alt="luci">
-    <img id="foto1" src="Progetto 1/foto finali.jpg" alt="set1">
-    <img id="foto1" src="Progetto 1/foto finali (2).jpg" alt="set2">
+  <div class="container">
+      <div id="testo1">
+        <h2>Editoriale Eden</h2>
+        <p>Progetto di Fashion Styling: "In questo editoriale, ispirato al Giardino dell’Eden, Eva è tentata da beni materiali e di lusso, cadendo vittima del consumismo, che la circonda con una montagna di indumenti superflui e insignificanti ma che sul momento le conferiscono sicurezza, provocazione e audacia.
+          Il dramma si manifesta nel momento in cui Eva realizza il loro vuoto significato e si pente degli acquisti compulsivi e non necessari; per questo ora si abbandona tra i vestiti sparsi a terra e mostra un'espressione di pentimento e malinconia.
+          L’invito è alla riflessione sul valore reale degli oggetti e sulla soddisfazione effimera che il consumismo offre, mentre il vero benessere deriva dalla consapevolezza e dalla ricerca di una felicità autentica e sostenibile.</p>
+      </div>
+      <img id="foto1"src="Progetto 1/2.jpg" alt="Eden">
 </div>
 
 <div class="container">
@@ -76,12 +69,6 @@
       <p>Questo mazzo di carte si ispira ad alcune delle più affascinanti collezioni della stilista cinese Guo Pei, per celebrare i suoi capolavori attraverso l'interpretazione dei 22 Arcani Maggiori.</p></id></br>
   </div>
       <img id="foto3" src="Tarocchi/Tarocchi copertina.jpg" alt="Tarocchi">
-      <img id="foto3" src="Tarocchi/Impaginazione carte3.png" alt="Carro">
-      <img id="foto3" src="Tarocchi/Impaginazione carte6.png" alt="Papessa">
-      <img id="foto3" src="Tarocchi/Impaginazione carte7.png" alt="Angelo">
-      <img id="foto3" src="Tarocchi/Impaginazione carte9.png" alt="Morte">
-      <img id="foto3" src="Tarocchi/Impaginazione carte10.png" alt="Luna">
-  </div>
 
 </div>
     
