--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="Index.css">
   <title>Erica Reibaldi Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -78,10 +79,10 @@
     <div>
       <h2>Contatti</h2>
       <p>
-        E-mail: <a href="mailto:reibaldierica@gmail.com">reibaldierica@gmail.com</a><br>
-        Instagram: <a href="https://instagram.com/ericareibaldi" target="_blank">@ericareibaldi</a><br>
-        Telefono: 012 3456789<br>
-        LinkedIn: <a href="https://linkedin.com/in/ericareibaldi" target="_blank">Erica Reibaldi</a>
+        <i class="fa-regular fa-envelope"></i>  <a href="mailto:reibaldierica@gmail.com">reibaldierica@gmail.com</a><br>
+        <i class="fa-brands fa-instagram"></i> <a href="https://instagram.com/ericareibaldi" target="_blank">@ericareibaldi</a><br>
+        <i class="fa-solid fa-phone"></i> 012 3456789<br>
+        <i class="fa-brands fa-linkedin"></i>  <a href="https://linkedin.com/in/ericareibaldi" target="_blank">Erica Reibaldi</a>
       </p>
     </div>
 
