--- a/Index.html
+++ b/Index.html
@@ -12,13 +12,18 @@
   <!-- Header section with navigation links -->
   <header>
     <img id="logo" src="https://i.pinimg.com/564x/7d/a2/0c/7da20c4a27941504a8ee4502be1bff73.jpg" alt="Logo Erica Reibaldi">
-    <nav id="menu">
+    <div class="burger-menu" id="burger-menu">
+      &#9776;
+  </div>
+  <nav id="menu" class="nav-links">
       <a href="#chisono">Chi sono</a>
       <a href="#Progetti">Progetti</a>
       <a href="#dovetrovarmi">Dove trovarmi</a>
       <a href="#contatti">Contatti</a>
-    </nav>
-  </header>
+  </nav>
+</header>
+
+<script src="script.js"></script>
 
   <div class="chisono">
     <!-- Section "Chi sono" -->
