--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
   </div>  
 
  <!-- Section "Progetti" -->
- <div class="progetti">
+ <div class="Progetti">
   <h2>Progetti</h2>
   <p>Ecco i miei progetti più recenti.</p>
   
