--- a/Index.html
+++ b/Index.html
@@ -43,12 +43,14 @@
     </div>
   </div>  
 
- <!-- Section "Progetti" -->
- <div class="Progetti">
+<!-- Section "Progetti" -->
+<div class="progetti">
   <h2>Progetti</h2>
   <p>Ecco i miei progetti più recenti.</p>
+</div>
+ 
   
-  <div class="container">
+<div class="container">
       <div id="testo1">
         <h2>Editoriale Eden</h2>
         <p>Progetto di Fashion Styling: "In questo editoriale, ispirato al Giardino dell’Eden, Eva è tentata da beni materiali e di lusso, cadendo vittima del consumismo, che la circonda con una montagna di indumenti superflui e insignificanti ma che sul momento le conferiscono sicurezza, provocazione e audacia.
