--- a/Index.html
+++ b/Index.html
@@ -114,6 +114,7 @@
     <span style="float: right; cursor: pointer;" onclick="popup()">X</span>
     <h1>SEGUIMI</h1>
     <p>Visita il mio profilo Instagram per rimanere sempre aggiornato!</p>
+    <i class="fa-brands fa-instagram"></i> <a href="https://instagram.com/ericareibaldi" target="_blank">@ericareibaldi</a>
 </div>
 
 
